[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/grassland_tiles.png" type="Texture" id=1]
[ext_resource path="res://resources/units/spear_shield.png" type="Texture" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://mods/base/maps/Map0.tscn" type="PackedScene" id=4]
[ext_resource path="res://camera/MainCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://misc/BuildingPreview.tscn" type="PackedScene" id=6]
[ext_resource path="res://misc/BuildingPlacementPreview.tscn" type="PackedScene" id=7]
[ext_resource path="res://misc/TileMarker.tscn" type="PackedScene" id=8]
[ext_resource path="res://tilesets/basic_tileset.tres" type="TileSet" id=9]
[ext_resource path="res://buildings/Building.gd" type="Script" id=10]
[ext_resource path="res://mods/base/modes/World.gd" type="Script" id=11]
[ext_resource path="res://resources/grassland_tiles_height_highlighted.png" type="Texture" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 128 )

[node name="World0" type="YSort"]
script = ExtResource( 11 )

[node name="AStarMap" type="TileMap" parent="."]
modulate = Color( 1, 0, 0.819608, 0.364706 )
z_index = 100
mode = 1
tile_set = ExtResource( 9 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( 65556, 16, 0, 131091, 16, 0, 131092, 16, 0, 131093, 16, 0, 196626, 16, 0, 196627, 16, 0, 196628, 16, 0, 196629, 16, 0, 196630, 16, 0, 262161, 16, 0, 262162, 16, 0, 262163, 16, 0, 262164, 16, 0, 262165, 16, 0, 262166, 16, 0, 262167, 16, 0, 327696, 16, 0, 327697, 16, 0, 327698, 16, 0, 327699, 16, 0, 327700, 16, 0, 327701, 16, 0, 327702, 16, 0, 327703, 16, 0, 327704, 16, 0, 393231, 16, 0, 393232, 16, 0, 393233, 16, 0, 393234, 16, 0, 393235, 16, 0, 393236, 16, 0, 393237, 16, 0, 393238, 16, 0, 393239, 16, 0, 393240, 16, 0, 393241, 16, 0, 458766, 16, 0, 458767, 16, 0, 458768, 16, 0, 458769, 16, 0, 458770, 16, 0, 458771, 16, 0, 458772, 16, 0, 458773, 16, 0, 458774, 16, 0, 458775, 16, 0, 458776, 16, 0, 458777, 16, 0, 458778, 16, 0, 524301, 16, 0, 524302, 16, 0, 524303, 16, 0, 524304, 16, 0, 524305, 16, 0, 524306, 16, 0, 524307, 16, 0, 524308, 16, 0, 524309, 16, 0, 524310, 16, 0, 524311, 16, 0, 524312, 16, 0, 524313, 16, 0, 524314, 16, 0, 524315, 16, 0, 589836, 16, 0, 589837, 16, 0, 589838, 16, 0, 589839, 16, 0, 589840, 16, 0, 589841, 16, 0, 589842, 16, 0, 589843, 16, 0, 589844, 16, 0, 589845, 16, 0, 589846, 16, 0, 589847, 16, 0, 589848, 16, 0, 589849, 16, 0, 589850, 16, 0, 589851, 16, 0, 589852, 16, 0, 655371, 16, 0, 655372, 16, 0, 655373, 16, 0, 655374, 16, 0, 655375, 16, 0, 655376, 16, 0, 655377, 16, 0, 655378, 16, 0, 655379, 16, 0, 655380, 16, 0, 655381, 16, 0, 655382, 16, 0, 655383, 16, 0, 655384, 16, 0, 655385, 16, 0, 655386, 16, 0, 655387, 16, 0, 655388, 16, 0, 655389, 16, 0, 720906, 16, 0, 720907, 16, 0, 720908, 16, 0, 720909, 16, 0, 720910, 16, 0, 720911, 16, 0, 720912, 16, 0, 720913, 16, 0, 720914, 16, 0, 720915, 16, 0, 720916, 16, 0, 720917, 16, 0, 720918, 16, 0, 720919, 16, 0, 720920, 16, 0, 720921, 16, 0, 720922, 16, 0, 720923, 16, 0, 720924, 16, 0, 720925, 16, 0, 720926, 16, 0, 786441, 16, 0, 786442, 16, 0, 786443, 16, 0, 786444, 16, 0, 786445, 16, 0, 786446, 16, 0, 786447, 16, 0, 786448, 16, 0, 786449, 16, 0, 786450, 16, 0, 786451, 16, 0, 786452, 16, 0, 786453, 16, 0, 786454, 16, 0, 786455, 16, 0, 786456, 16, 0, 786457, 16, 0, 786458, 16, 0, 786459, 16, 0, 786460, 16, 0, 786461, 16, 0, 786462, 16, 0, 786463, 16, 0, 851976, 16, 0, 851977, 16, 0, 851978, 16, 0, 851979, 16, 0, 851980, 16, 0, 851981, 16, 0, 851982, 16, 0, 851983, 16, 0, 851984, 16, 0, 851985, 16, 0, 851986, 16, 0, 851987, 16, 0, 851988, 16, 0, 851989, 16, 0, 851990, 16, 0, 851991, 16, 0, 851992, 16, 0, 851993, 16, 0, 851994, 16, 0, 851995, 16, 0, 851996, 16, 0, 851997, 16, 0, 851998, 16, 0, 851999, 16, 0, 852000, 16, 0, 917511, 16, 0, 917512, 16, 0, 917513, 16, 0, 917514, 16, 0, 917515, 16, 0, 917516, 16, 0, 917517, 16, 0, 917518, 16, 0, 917519, 16, 0, 917520, 16, 0, 917521, 16, 0, 917522, 16, 0, 917523, 16, 0, 917524, 16, 0, 917525, 16, 0, 917526, 16, 0, 917527, 16, 0, 917528, 16, 0, 917529, 16, 0, 917530, 16, 0, 917531, 16, 0, 917532, 16, 0, 917533, 16, 0, 917534, 16, 0, 917535, 16, 0, 917536, 16, 0, 917537, 16, 0, 983046, 16, 0, 983047, 16, 0, 983048, 16, 0, 983049, 16, 0, 983050, 16, 0, 983051, 16, 0, 983052, 16, 0, 983053, 16, 0, 983054, 16, 0, 983055, 16, 0, 983056, 16, 0, 983057, 16, 0, 983058, 16, 0, 983059, 16, 0, 983060, 16, 0, 983061, 16, 0, 983062, 16, 0, 983063, 16, 0, 983064, 16, 0, 983065, 16, 0, 983066, 16, 0, 983067, 16, 0, 983068, 16, 0, 983069, 16, 0, 983070, 16, 0, 983071, 16, 0, 983072, 16, 0, 983073, 16, 0, 983074, 16, 0, 1048581, 16, 0, 1048582, 16, 0, 1048583, 16, 0, 1048584, 16, 0, 1048585, 16, 0, 1048586, 16, 0, 1048587, 16, 0, 1048588, 16, 0, 1048589, 16, 0, 1048590, 16, 0, 1048591, 16, 0, 1048592, 16, 0, 1048593, 16, 0, 1048594, 16, 0, 1048595, 16, 0, 1048596, 16, 0, 1048597, 16, 0, 1048598, 16, 0, 1048599, 16, 0, 1048600, 16, 0, 1048601, 16, 0, 1048602, 16, 0, 1048603, 16, 0, 1048604, 16, 0, 1048605, 16, 0, 1048606, 16, 0, 1048607, 16, 0, 1048608, 16, 0, 1048609, 16, 0, 1048610, 16, 0, 1048611, 16, 0, 1114116, 16, 0, 1114117, 16, 0, 1114118, 16, 0, 1114119, 16, 0, 1114120, 16, 0, 1114121, 16, 0, 1114122, 16, 0, 1114123, 16, 0, 1114124, 16, 0, 1114125, 16, 0, 1114126, 16, 0, 1114127, 16, 0, 1114128, 16, 0, 1114129, 16, 0, 1114130, 16, 0, 1114131, 16, 0, 1114132, 16, 0, 1114133, 16, 0, 1114134, 16, 0, 1114135, 16, 0, 1114136, 16, 0, 1114137, 16, 0, 1114138, 16, 0, 1114139, 16, 0, 1114140, 16, 0, 1114141, 16, 0, 1114142, 16, 0, 1114143, 16, 0, 1114144, 16, 0, 1114145, 16, 0, 1114146, 16, 0, 1114147, 16, 0, 1114148, 16, 0, 1179651, 16, 0, 1179652, 16, 0, 1179653, 16, 0, 1179654, 16, 0, 1179655, 16, 0, 1179656, 16, 0, 1179657, 16, 0, 1179658, 16, 0, 1179659, 16, 0, 1179660, 16, 0, 1179661, 16, 0, 1179662, 16, 0, 1179663, 16, 0, 1179664, 16, 0, 1179665, 16, 0, 1179666, 16, 0, 1179667, 16, 0, 1179668, 16, 0, 1179669, 16, 0, 1179670, 16, 0, 1179671, 16, 0, 1179672, 16, 0, 1179673, 16, 0, 1179674, 16, 0, 1179675, 16, 0, 1179676, 16, 0, 1179677, 16, 0, 1179678, 16, 0, 1179679, 16, 0, 1179680, 16, 0, 1179681, 16, 0, 1179682, 16, 0, 1179683, 16, 0, 1179684, 16, 0, 1179685, 16, 0, 1245186, 16, 0, 1245187, 16, 0, 1245188, 16, 0, 1245189, 16, 0, 1245190, 16, 0, 1245191, 16, 0, 1245192, 16, 0, 1245193, 16, 0, 1245194, 16, 0, 1245195, 16, 0, 1245196, 16, 0, 1245197, 16, 0, 1245198, 16, 0, 1245199, 16, 0, 1245200, 16, 0, 1245201, 16, 0, 1245202, 16, 0, 1245203, 16, 0, 1245204, 16, 0, 1245205, 16, 0, 1245206, 16, 0, 1245207, 16, 0, 1245208, 16, 0, 1245209, 16, 0, 1245210, 16, 0, 1245211, 16, 0, 1245212, 16, 0, 1245213, 16, 0, 1245214, 16, 0, 1245215, 16, 0, 1245216, 16, 0, 1245217, 16, 0, 1245218, 16, 0, 1245219, 16, 0, 1245220, 16, 0, 1245221, 16, 0, 1245222, 16, 0, 1310721, 16, 0, 1310722, 16, 0, 1310723, 16, 0, 1310724, 16, 0, 1310725, 16, 0, 1310726, 16, 0, 1310727, 16, 0, 1310728, 16, 0, 1310729, 16, 0, 1310730, 16, 0, 1310731, 16, 0, 1310732, 16, 0, 1310733, 16, 0, 1310734, 16, 0, 1310735, 16, 0, 1310736, 16, 0, 1310737, 16, 0, 1310738, 16, 0, 1310739, 16, 0, 1310740, 16, 0, 1310741, 16, 0, 1310742, 16, 0, 1310743, 16, 0, 1310744, 16, 0, 1310745, 16, 0, 1310746, 16, 0, 1310747, 16, 0, 1310748, 16, 0, 1310749, 16, 0, 1310750, 16, 0, 1310751, 16, 0, 1310752, 16, 0, 1310753, 16, 0, 1310754, 16, 0, 1310755, 16, 0, 1310756, 16, 0, 1310757, 16, 0, 1310758, 16, 0, 1310759, 16, 0, 1376258, 16, 0, 1376259, 16, 0, 1376260, 16, 0, 1376261, 16, 0, 1376262, 16, 0, 1376263, 16, 0, 1376264, 16, 0, 1376265, 16, 0, 1376266, 16, 0, 1376267, 16, 0, 1376268, 16, 0, 1376269, 16, 0, 1376270, 16, 0, 1376271, 16, 0, 1376272, 16, 0, 1376273, 16, 0, 1376274, 16, 0, 1376275, 16, 0, 1376276, 16, 0, 1376277, 16, 0, 1376278, 16, 0, 1376279, 16, 0, 1376280, 16, 0, 1376281, 16, 0, 1376282, 16, 0, 1376283, 16, 0, 1376284, 16, 0, 1376285, 16, 0, 1376286, 16, 0, 1376287, 16, 0, 1376288, 16, 0, 1376289, 16, 0, 1376290, 16, 0, 1376291, 16, 0, 1376292, 16, 0, 1376293, 16, 0, 1376294, 16, 0, 1376295, 16, 0, 1376296, 16, 0, 1441795, 16, 0, 1441796, 16, 0, 1441797, 16, 0, 1441798, 16, 0, 1441799, 16, 0, 1441800, 16, 0, 1441801, 16, 0, 1441802, 16, 0, 1441803, 16, 0, 1441804, 16, 0, 1441805, 16, 0, 1441806, 16, 0, 1441807, 16, 0, 1441808, 16, 0, 1441809, 16, 0, 1441810, 16, 0, 1441811, 16, 0, 1441812, 16, 0, 1441813, 16, 0, 1441814, 16, 0, 1441815, 16, 0, 1441816, 16, 0, 1441817, 16, 0, 1441818, 16, 0, 1441819, 16, 0, 1441820, 16, 0, 1441821, 16, 0, 1441822, 16, 0, 1441823, 16, 0, 1441824, 16, 0, 1441825, 16, 0, 1441826, 16, 0, 1441827, 16, 0, 1441828, 16, 0, 1441829, 16, 0, 1441830, 16, 0, 1441831, 16, 0, 1441832, 16, 0, 1441833, 16, 0, 1507332, 16, 0, 1507333, 16, 0, 1507334, 16, 0, 1507335, 16, 0, 1507336, 16, 0, 1507337, 16, 0, 1507338, 16, 0, 1507339, 16, 0, 1507340, 16, 0, 1507341, 16, 0, 1507342, 16, 0, 1507343, 16, 0, 1507344, 16, 0, 1507345, 16, 0, 1507346, 16, 0, 1507347, 16, 0, 1507348, 16, 0, 1507349, 16, 0, 1507350, 16, 0, 1507351, 16, 0, 1507352, 16, 0, 1507353, 16, 0, 1507354, 16, 0, 1507355, 16, 0, 1507356, 16, 0, 1507357, 16, 0, 1507358, 16, 0, 1507359, 16, 0, 1507360, 16, 0, 1507361, 16, 0, 1507362, 16, 0, 1507363, 16, 0, 1507364, 16, 0, 1507365, 16, 0, 1507366, 16, 0, 1507367, 16, 0, 1507368, 16, 0, 1507369, 16, 0, 1507370, 16, 0, 1572869, 16, 0, 1572870, 16, 0, 1572871, 16, 0, 1572872, 16, 0, 1572873, 16, 0, 1572874, 16, 0, 1572875, 16, 0, 1572876, 16, 0, 1572877, 16, 0, 1572878, 16, 0, 1572879, 16, 0, 1572880, 16, 0, 1572881, 16, 0, 1572882, 16, 0, 1572883, 16, 0, 1572884, 16, 0, 1572885, 16, 0, 1572886, 16, 0, 1572887, 16, 0, 1572888, 16, 0, 1572889, 16, 0, 1572890, 16, 0, 1572891, 16, 0, 1572892, 16, 0, 1572893, 16, 0, 1572894, 16, 0, 1572895, 16, 0, 1572896, 16, 0, 1572897, 16, 0, 1572898, 16, 0, 1572899, 16, 0, 1572900, 16, 0, 1572901, 16, 0, 1572902, 16, 0, 1572903, 16, 0, 1572904, 16, 0, 1572905, 16, 0, 1572906, 16, 0, 1572907, 16, 0, 1638406, 16, 0, 1638407, 16, 0, 1638408, 16, 0, 1638409, 16, 0, 1638410, 16, 0, 1638411, 16, 0, 1638412, 16, 0, 1638413, 16, 0, 1638414, 16, 0, 1638415, 16, 0, 1638416, 16, 0, 1638417, 16, 0, 1638418, 16, 0, 1638419, 16, 0, 1638420, 16, 0, 1638421, 16, 0, 1638422, 16, 0, 1638423, 16, 0, 1638424, 16, 0, 1638425, 16, 0, 1638426, 16, 0, 1638427, 16, 0, 1638428, 16, 0, 1638429, 16, 0, 1638430, 16, 0, 1638431, 16, 0, 1638432, 16, 0, 1638433, 16, 0, 1638434, 16, 0, 1638435, 16, 0, 1638436, 16, 0, 1638437, 16, 0, 1638438, 16, 0, 1638439, 16, 0, 1638440, 16, 0, 1638441, 16, 0, 1638442, 16, 0, 1638443, 16, 0, 1638444, 16, 0, 1703943, 16, 0, 1703944, 16, 0, 1703945, 16, 0, 1703946, 16, 0, 1703947, 16, 0, 1703948, 16, 0, 1703949, 16, 0, 1703950, 16, 0, 1703951, 16, 0, 1703952, 16, 0, 1703953, 16, 0, 1703954, 16, 0, 1703955, 16, 0, 1703956, 16, 0, 1703957, 16, 0, 1703958, 16, 0, 1703959, 16, 0, 1703960, 16, 0, 1703961, 16, 0, 1703962, 16, 0, 1703963, 16, 0, 1703964, 16, 0, 1703965, 16, 0, 1703966, 16, 0, 1703967, 16, 0, 1703968, 16, 0, 1703969, 16, 0, 1703970, 16, 0, 1703971, 16, 0, 1703972, 16, 0, 1703973, 16, 0, 1703974, 16, 0, 1703975, 16, 0, 1703976, 16, 0, 1703977, 16, 0, 1703978, 16, 0, 1703979, 16, 0, 1703980, 16, 0, 1703981, 16, 0, 1769480, 16, 0, 1769481, 16, 0, 1769482, 16, 0, 1769483, 16, 0, 1769484, 16, 0, 1769485, 16, 0, 1769486, 16, 0, 1769487, 16, 0, 1769488, 16, 0, 1769489, 16, 0, 1769490, 16, 0, 1769491, 16, 0, 1769492, 16, 0, 1769493, 16, 0, 1769494, 16, 0, 1769495, 16, 0, 1769496, 16, 0, 1769497, 16, 0, 1769498, 16, 0, 1769499, 16, 0, 1769500, 16, 0, 1769501, 16, 0, 1769502, 16, 0, 1769503, 16, 0, 1769504, 16, 0, 1769505, 16, 0, 1769506, 16, 0, 1769507, 16, 0, 1769508, 16, 0, 1769509, 16, 0, 1769510, 16, 0, 1769511, 16, 0, 1769512, 16, 0, 1769513, 16, 0, 1769514, 16, 0, 1769515, 16, 0, 1769516, 16, 0, 1769517, 16, 0, 1769518, 16, 0, 1835017, 16, 0, 1835018, 16, 0, 1835019, 16, 0, 1835020, 16, 0, 1835021, 16, 0, 1835022, 16, 0, 1835023, 16, 0, 1835024, 16, 0, 1835025, 16, 0, 1835026, 16, 0, 1835027, 16, 0, 1835028, 16, 0, 1835029, 16, 0, 1835030, 16, 0, 1835031, 16, 0, 1835032, 16, 0, 1835033, 16, 0, 1835034, 16, 0, 1835035, 16, 0, 1835036, 16, 0, 1835037, 16, 0, 1835038, 16, 0, 1835039, 16, 0, 1835040, 16, 0, 1835041, 16, 0, 1835042, 16, 0, 1835043, 16, 0, 1835044, 16, 0, 1835045, 16, 0, 1835046, 16, 0, 1835047, 16, 0, 1835048, 16, 0, 1835049, 16, 0, 1835050, 16, 0, 1835051, 16, 0, 1835052, 16, 0, 1835053, 16, 0, 1835054, 16, 0, 1835055, 16, 0, 1900554, 16, 0, 1900555, 16, 0, 1900556, 16, 0, 1900557, 16, 0, 1900558, 16, 0, 1900559, 16, 0, 1900560, 16, 0, 1900561, 16, 0, 1900562, 16, 0, 1900563, 16, 0, 1900564, 16, 0, 1900565, 16, 0, 1900566, 16, 0, 1900567, 16, 0, 1900568, 16, 0, 1900569, 16, 0, 1900570, 16, 0, 1900571, 16, 0, 1900572, 16, 0, 1900573, 16, 0, 1900574, 16, 0, 1900575, 16, 0, 1900576, 16, 0, 1900577, 16, 0, 1900578, 16, 0, 1900579, 16, 0, 1900580, 16, 0, 1900581, 16, 0, 1900582, 16, 0, 1900583, 16, 0, 1900584, 16, 0, 1900585, 16, 0, 1900586, 16, 0, 1900587, 16, 0, 1900588, 16, 0, 1900589, 16, 0, 1900590, 16, 0, 1900591, 16, 0, 1900592, 16, 0, 1966091, 16, 0, 1966092, 16, 0, 1966093, 16, 0, 1966094, 16, 0, 1966095, 16, 0, 1966096, 16, 0, 1966097, 16, 0, 1966098, 16, 0, 1966099, 16, 0, 1966100, 16, 0, 1966101, 16, 0, 1966102, 16, 0, 1966103, 16, 0, 1966104, 16, 0, 1966105, 16, 0, 1966106, 16, 0, 1966107, 16, 0, 1966108, 16, 0, 1966109, 16, 0, 1966110, 16, 0, 1966111, 16, 0, 1966112, 16, 0, 1966113, 16, 0, 1966114, 16, 0, 1966115, 16, 0, 1966116, 16, 0, 1966117, 16, 0, 1966118, 16, 0, 1966119, 16, 0, 1966120, 16, 0, 1966121, 16, 0, 1966122, 16, 0, 1966123, 16, 0, 1966124, 16, 0, 1966125, 16, 0, 1966126, 16, 0, 1966127, 16, 0, 1966128, 16, 0, 1966129, 16, 0, 2031628, 16, 0, 2031629, 16, 0, 2031630, 16, 0, 2031631, 16, 0, 2031632, 16, 0, 2031633, 16, 0, 2031634, 16, 0, 2031635, 16, 0, 2031636, 16, 0, 2031637, 16, 0, 2031638, 16, 0, 2031639, 16, 0, 2031640, 16, 0, 2031641, 16, 0, 2031642, 16, 0, 2031643, 16, 0, 2031644, 16, 0, 2031645, 16, 0, 2031646, 16, 0, 2031647, 16, 0, 2031648, 16, 0, 2031649, 16, 0, 2031650, 16, 0, 2031651, 16, 0, 2031652, 16, 0, 2031653, 16, 0, 2031654, 16, 0, 2031655, 16, 0, 2031656, 16, 0, 2031657, 16, 0, 2031658, 16, 0, 2031659, 16, 0, 2031660, 16, 0, 2031661, 16, 0, 2031662, 16, 0, 2031663, 16, 0, 2031664, 16, 0, 2031665, 16, 0, 2031666, 16, 0, 2097165, 16, 0, 2097166, 16, 0, 2097167, 16, 0, 2097168, 16, 0, 2097169, 16, 0, 2097170, 16, 0, 2097171, 16, 0, 2097172, 16, 0, 2097173, 16, 0, 2097174, 16, 0, 2097175, 16, 0, 2097176, 16, 0, 2097177, 16, 0, 2097178, 16, 0, 2097179, 16, 0, 2097180, 16, 0, 2097181, 16, 0, 2097182, 16, 0, 2097183, 16, 0, 2097184, 16, 0, 2097185, 16, 0, 2097186, 16, 0, 2097187, 16, 0, 2097188, 16, 0, 2097189, 16, 0, 2097190, 16, 0, 2097191, 16, 0, 2097192, 16, 0, 2097193, 16, 0, 2097194, 16, 0, 2097195, 16, 0, 2097196, 16, 0, 2097197, 16, 0, 2097198, 16, 0, 2097199, 16, 0, 2097200, 16, 0, 2097201, 16, 0, 2097202, 16, 0, 2097203, 16, 0, 2162702, 16, 0, 2162703, 16, 0, 2162704, 16, 0, 2162705, 16, 0, 2162706, 16, 0, 2162707, 16, 0, 2162708, 16, 0, 2162709, 16, 0, 2162710, 16, 0, 2162711, 16, 0, 2162712, 16, 0, 2162713, 16, 0, 2162714, 16, 0, 2162715, 16, 0, 2162716, 16, 0, 2162717, 16, 0, 2162718, 16, 0, 2162719, 16, 0, 2162720, 16, 0, 2162721, 16, 0, 2162722, 16, 0, 2162723, 16, 0, 2162724, 16, 0, 2162725, 16, 0, 2162726, 16, 0, 2162727, 16, 0, 2162728, 16, 0, 2162729, 16, 0, 2162730, 16, 0, 2162731, 16, 0, 2162732, 16, 0, 2162733, 16, 0, 2162734, 16, 0, 2162735, 16, 0, 2162736, 16, 0, 2162737, 16, 0, 2162738, 16, 0, 2162739, 16, 0, 2162740, 16, 0, 2228239, 16, 0, 2228240, 16, 0, 2228241, 16, 0, 2228242, 16, 0, 2228243, 16, 0, 2228244, 16, 0, 2228245, 16, 0, 2228246, 16, 0, 2228247, 16, 0, 2228248, 16, 0, 2228249, 16, 0, 2228250, 16, 0, 2228251, 16, 0, 2228252, 16, 0, 2228253, 16, 0, 2228254, 16, 0, 2228255, 16, 0, 2228256, 16, 0, 2228257, 16, 0, 2228258, 16, 0, 2228259, 16, 0, 2228260, 16, 0, 2228261, 16, 0, 2228262, 16, 0, 2228263, 16, 0, 2228264, 16, 0, 2228265, 16, 0, 2228266, 16, 0, 2228267, 16, 0, 2228268, 16, 0, 2228269, 16, 0, 2228270, 16, 0, 2228271, 16, 0, 2228272, 16, 0, 2228273, 16, 0, 2228274, 16, 0, 2228275, 16, 0, 2293776, 16, 0, 2293777, 16, 0, 2293778, 16, 0, 2293779, 16, 0, 2293780, 16, 0, 2293781, 16, 0, 2293782, 16, 0, 2293783, 16, 0, 2293784, 16, 0, 2293785, 16, 0, 2293786, 16, 0, 2293787, 16, 0, 2293788, 16, 0, 2293789, 16, 0, 2293790, 16, 0, 2293791, 16, 0, 2293792, 16, 0, 2293793, 16, 0, 2293794, 16, 0, 2293795, 16, 0, 2293796, 16, 0, 2293797, 16, 0, 2293798, 16, 0, 2293799, 16, 0, 2293800, 16, 0, 2293801, 16, 0, 2293802, 16, 0, 2293803, 16, 0, 2293804, 16, 0, 2293805, 16, 0, 2293806, 16, 0, 2293807, 16, 0, 2293808, 16, 0, 2293809, 16, 0, 2293810, 16, 0, 2359313, 16, 0, 2359314, 16, 0, 2359315, 16, 0, 2359316, 16, 0, 2359317, 16, 0, 2359318, 16, 0, 2359319, 16, 0, 2359320, 16, 0, 2359321, 16, 0, 2359322, 16, 0, 2359323, 16, 0, 2359324, 16, 0, 2359325, 16, 0, 2359326, 16, 0, 2359327, 16, 0, 2359328, 16, 0, 2359329, 16, 0, 2359330, 16, 0, 2359331, 16, 0, 2359332, 16, 0, 2359333, 16, 0, 2359334, 16, 0, 2359335, 16, 0, 2359336, 16, 0, 2359337, 16, 0, 2359338, 16, 0, 2359339, 16, 0, 2359340, 16, 0, 2359341, 16, 0, 2359342, 16, 0, 2359343, 16, 0, 2359344, 16, 0, 2359345, 16, 0, 2424850, 16, 0, 2424851, 16, 0, 2424852, 16, 0, 2424853, 16, 0, 2424854, 16, 0, 2424855, 16, 0, 2424856, 16, 0, 2424857, 16, 0, 2424858, 16, 0, 2424859, 16, 0, 2424860, 16, 0, 2424861, 16, 0, 2424862, 16, 0, 2424863, 16, 0, 2424864, 16, 0, 2424865, 16, 0, 2424866, 16, 0, 2424867, 16, 0, 2424868, 16, 0, 2424869, 16, 0, 2424870, 16, 0, 2424871, 16, 0, 2424872, 16, 0, 2424873, 16, 0, 2424874, 16, 0, 2424875, 16, 0, 2424876, 16, 0, 2424877, 16, 0, 2424878, 16, 0, 2424879, 16, 0, 2424880, 16, 0, 2490387, 16, 0, 2490388, 16, 0, 2490389, 16, 0, 2490390, 16, 0, 2490391, 16, 0, 2490392, 16, 0, 2490393, 16, 0, 2490394, 16, 0, 2490395, 16, 0, 2490396, 16, 0, 2490397, 16, 0, 2490398, 16, 0, 2490399, 16, 0, 2490400, 16, 0, 2490401, 16, 0, 2490402, 16, 0, 2490403, 16, 0, 2490404, 16, 0, 2490405, 16, 0, 2490406, 16, 0, 2490407, 16, 0, 2490408, 16, 0, 2490409, 16, 0, 2490410, 16, 0, 2490411, 16, 0, 2490412, 16, 0, 2490413, 16, 0, 2490414, 16, 0, 2490415, 16, 0, 2555924, 16, 0, 2555925, 16, 0, 2555926, 16, 0, 2555927, 16, 0, 2555928, 16, 0, 2555929, 16, 0, 2555930, 16, 0, 2555931, 16, 0, 2555932, 16, 0, 2555933, 16, 0, 2555934, 16, 0, 2555935, 16, 0, 2555936, 16, 0, 2555937, 16, 0, 2555938, 16, 0, 2555939, 16, 0, 2555940, 16, 0, 2555941, 16, 0, 2555942, 16, 0, 2555943, 16, 0, 2555944, 16, 0, 2555945, 16, 0, 2555946, 16, 0, 2555947, 16, 0, 2555948, 16, 0, 2555949, 16, 0, 2555950, 16, 0, 2621461, 16, 0, 2621462, 16, 0, 2621463, 16, 0, 2621464, 16, 0, 2621465, 16, 0, 2621466, 16, 0, 2621467, 16, 0, 2621468, 16, 0, 2621469, 16, 0, 2621470, 16, 0, 2621471, 16, 0, 2621472, 16, 0, 2621473, 16, 0, 2621474, 16, 0, 2621475, 16, 0, 2621476, 16, 0, 2621477, 16, 0, 2621478, 16, 0, 2621479, 16, 0, 2621480, 16, 0, 2621481, 16, 0, 2621482, 16, 0, 2621483, 16, 0, 2621484, 16, 0, 2621485, 16, 0, 2686998, 16, 0, 2686999, 16, 0, 2687000, 16, 0, 2687001, 16, 0, 2687002, 16, 0, 2687003, 16, 0, 2687004, 16, 0, 2687005, 16, 0, 2687006, 16, 0, 2687007, 16, 0, 2687008, 16, 0, 2687009, 16, 0, 2687010, 16, 0, 2687011, 16, 0, 2687012, 16, 0, 2687013, 16, 0, 2687014, 16, 0, 2687015, 16, 0, 2687016, 16, 0, 2687017, 16, 0, 2687018, 16, 0, 2687019, 16, 0, 2687020, 16, 0, 2752535, 16, 0, 2752536, 16, 0, 2752537, 16, 0, 2752538, 16, 0, 2752539, 16, 0, 2752540, 16, 0, 2752541, 16, 0, 2752542, 16, 0, 2752543, 16, 0, 2752544, 16, 0, 2752545, 16, 0, 2752546, 16, 0, 2752547, 16, 0, 2752548, 16, 0, 2752549, 16, 0, 2752550, 16, 0, 2752551, 16, 0, 2752552, 16, 0, 2752553, 16, 0, 2752554, 16, 0, 2752555, 16, 0, 2818072, 16, 0, 2818073, 16, 0, 2818074, 16, 0, 2818075, 16, 0, 2818076, 16, 0, 2818077, 16, 0, 2818078, 16, 0, 2818079, 16, 0, 2818080, 16, 0, 2818081, 16, 0, 2818082, 16, 0, 2818083, 16, 0, 2818084, 16, 0, 2818085, 16, 0, 2818086, 16, 0, 2818087, 16, 0, 2818088, 16, 0, 2818089, 16, 0, 2818090, 16, 0, 2883609, 16, 0, 2883610, 16, 0, 2883611, 16, 0, 2883612, 16, 0, 2883613, 16, 0, 2883614, 16, 0, 2883615, 16, 0, 2883616, 16, 0, 2883617, 16, 0, 2883618, 16, 0, 2883619, 16, 0, 2883620, 16, 0, 2883621, 16, 0, 2883622, 16, 0, 2883623, 16, 0, 2883624, 16, 0, 2883625, 16, 0, 2949146, 16, 0, 2949147, 16, 0, 2949148, 16, 0, 2949149, 16, 0, 2949150, 16, 0, 2949151, 16, 0, 2949152, 16, 0, 2949153, 16, 0, 2949154, 16, 0, 2949155, 16, 0, 2949156, 16, 0, 2949157, 16, 0, 2949158, 16, 0, 2949159, 16, 0, 2949160, 16, 0, 3014683, 16, 0, 3014684, 16, 0, 3014685, 16, 0, 3014686, 16, 0, 3014687, 16, 0, 3014688, 16, 0, 3014689, 16, 0, 3014690, 16, 0, 3014691, 16, 0, 3014692, 16, 0, 3014693, 16, 0, 3014694, 16, 0, 3014695, 16, 0, 3080220, 16, 0, 3080221, 16, 0, 3080222, 16, 0, 3080223, 16, 0, 3080224, 16, 0, 3080225, 16, 0, 3080226, 16, 0, 3080227, 16, 0, 3080228, 16, 0, 3080229, 16, 0, 3080230, 16, 0, 3145757, 16, 0, 3145758, 16, 0, 3145759, 16, 0, 3145760, 16, 0, 3145761, 16, 0, 3145762, 16, 0, 3145763, 16, 0, 3145764, 16, 0, 3145765, 16, 0, 3211294, 16, 0, 3211295, 16, 0, 3211296, 16, 0, 3211297, 16, 0, 3211298, 16, 0, 3211299, 16, 0, 3211300, 16, 0, 3276831, 16, 0, 3276832, 16, 0, 3276833, 16, 0, 3276834, 16, 0, 3276835, 16, 0, 3342368, 16, 0, 3342369, 16, 0, 3342370, 16, 0, 3407905, 16, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="MouseCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseCollision"]
shape = SubResource( 1 )

[node name="CellBoundaries" type="YSort" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.568627 )

[node name="Shapes" type="YSort" parent="."]
visible = false

[node name="AStarPath" type="Line2D" parent="."]
z_index = 100
width = 2.0
default_color = Color( 0.360784, 1, 0, 1 )
end_cap_mode = 2
round_precision = 7

[node name="Navigation" type="Navigation2D" parent="."]

[node name="Map0" parent="Navigation" instance=ExtResource( 4 )]

[node name="BuildingTrainingCamp" type="Sprite" parent="Navigation"]
position = Vector2( 436.045, 486.094 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 510, 730, 245, 220 )
script = ExtResource( 10 )

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Camera2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 20.1587, 647.599 )

[node name="Misc" type="Node2D" parent="."]
position = Vector2( 61.9087, 606.387 )

[node name="BuildingPreview" parent="Misc" instance=ExtResource( 6 )]

[node name="BuildingPlacementPreview" parent="Misc" instance=ExtResource( 7 )]

[node name="TileMarker" parent="Misc" instance=ExtResource( 8 )]
modulate = Color( 1, 0, 0.937255, 0.352941 )
texture = SubResource( 2 )

[node name="SelectedTile" type="Sprite" parent="."]

[node name="TestUnit" type="Sprite" parent="."]
position = Vector2( 123.823, 770.809 )
texture = ExtResource( 2 )
